--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,4 +2,4 @@ mkdocs-macros-plugin>=0.7,<1.0
 mkdocs-material>=9.0,<10.0
 mkdocs-git-revision-date-localized-plugin>=1.1,<2.0
 mkdocs-simple-hooks>=0.1,<1.0
-pymdown-extensions
+mkdocs-include-markdown-plugin
