--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -121,7 +121,7 @@ jobs:
         uses: docker/build-push-action@c56af957549030174b10d6867f20e78cfd7debc5 # pin@v3.2.0
         with:
           context: .
-          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          platforms: linux/amd64,linux/arm64
           push: true
           target: production
           tags: ${{ env.docker_tags }}
