--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -41,13 +41,21 @@ jobs:
             - 'requirements.txt'
             - 'requirements-dev.txt'
 
-  pull-db:
-    name: Pull Production Database
+  run-migrations:
+    name: Run Database Migrations
     runs-on: ubuntu-latest
     needs: paths-filter
     if: needs.paths-filter.outputs.server == 'true'
 
     steps:
+
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
+
+      - name: Environment Setup
+        uses: ./.github/actions/setup
+        with:
+          install: true
+
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
         with:
           repository: git@github.com:inventree/test-db.git
@@ -55,4 +63,5 @@ jobs:
 
       - name: Apply Migrations
         run: |
+          invoke install
           invoke migrate
