--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -48,6 +48,11 @@ jobs:
     if: needs.paths-filter.outputs.server == 'true'
 
     steps:
+      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
+        with:
+          repository: git@github.com:inventree/test-db.git
+          ref: main
+          path: test-db
 
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
 
@@ -56,10 +61,6 @@ jobs:
         with:
           install: true
 
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
-        with:
-          repository: git@github.com:inventree/test-db.git
-          path: test-db
 
       - name: Apply Migrations
         run: |
