Let's try again

--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -49,10 +49,15 @@ jobs:
 
     steps:
       - name: Checkout Database
-        run: |
-          git clone git@github.com:inventree/test-db.git test-db --depth 1
+        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
+        with:
+          repository: git@github.com:inventree/test-db.git
+          ssh-key: ${{ secrets.CI_DB_KEY }}
+          ref: main
+          path: test-db
 
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
+        name: Checkout Code
 
       - name: Environment Setup
         uses: ./.github/actions/setup
