--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -49,7 +49,7 @@ jobs:
 
     steps:
       - name: Checkout Database
-        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
+        uses: actions/checkout@v3
         with:
           repository: git@github.com:inventree/test-db.git
           ssh-key: ${{ secrets.CI_DB_KEY }}
