Fix location of test database

--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -53,6 +53,7 @@ jobs:
         with:
           repository: inventree/test-db
           ssh-key: ${{ secrets.CI_DB_KEY }}
+          persist-credentials: true
           ref: main
           path: test-db
 
