Revert change to wrong file

--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -12,7 +12,7 @@ jobs:
 
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      INVENTREE_DB_NAME: './test-db/test-db.sqlite'
+      INVENTREE_DB_NAME: './test_db.sqlite'
       INVENTREE_DB_ENGINE: django.db.backends.sqlite3
       INVENTREE_DEBUG: info
       INVENTREE_MEDIA_ROOT: ./media
