--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -68,4 +68,6 @@ jobs:
 
       - name: Apply Migrations
         run: |
+          ls
+          ls /home/runner/work/InvenTree/
           invoke migrate
