--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -49,23 +49,17 @@ jobs:
 
     steps:
 
-      - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
+      - uses: actions/checkout@v3
         name: Checkout Code
 
       - name: Checkout Database
-        uses: actions/checkout@v3
-        with:
-          repository: inventree/test-db
-          ssh-key: ${{ secrets.CI_DB_KEY }}
-          persist-credentials: true
-          ref: main
-          path: test-db
+        run: |
+          git clone https://github.com/inventree/test-db --depth 1 test-db
 
       - name: Environment Setup
         uses: ./.github/actions/setup
         with:
           install: true
-
 
       - name: Apply Migrations
         run: |
