--- a/requirements.in
+++ b/requirements.in
@@ -10,6 +10,7 @@ django-crispy-forms<2.0                 # Form helpers # FIXED 2023-02-18 due to
 django-dbbackup                         # Backup / restore of database and media files
 django-error-report                     # Error report viewer for the admin interface
 django-filter                           # Extended filtering options
+django-flags                            # Feature flags
 django-formtools                        # Form wizard tools
 django-ical                             # iCal export for calendar views
 django-import-export==2.5.0             # Data import / export for admin interface
