--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ django==3.2.19
     #   django-dbbackup
     #   django-error-report
     #   django-filter
+    #   django-flags
     #   django-formtools
     #   django-ical
     #   django-import-export
@@ -91,6 +92,8 @@ django-dbbackup==4.0.2
 django-error-report==0.2.0
     # via -r requirements.in
 django-filter==23.2
+    # via -r requirements.in
+django-flags==5.0.12
     # via -r requirements.in
 django-formtools==2.4.1
     # via -r requirements.in
