--- a/InvenTree/config_template.yaml
+++ b/InvenTree/config_template.yaml
@@ -228,3 +228,11 @@ remote_login_header: HTTP_REMOTE_USER
 #   splash: splash_screen.jpg
 #   hide_admin_link: true
 #   hide_password_reset: true
+
+# Custom flags
+# InvenTree uses django-flags; read more in their docs at https://cfpb.github.io/django-flags/conditions/
+# Use environment variable INVENTREE_FLAGS or the settings below
+# flags:
+#  MY_FLAG:
+#     - condition: 'parameter'
+#       value: 'my_flag_param1'
