remove inclusion tag

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -209,7 +209,7 @@ nav:
 
 # Plugins
 plugins:
-  - include-markdown
+  # - include-markdown
   - search
   - git-revision-date-localized
   - mkdocs-simple-hooks:
