--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -6,9 +6,13 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "extract": "lingui extract",
+        "compile": "lingui compile --typescript"
     },
     "dependencies": {
+        "@lingui/core": "^3.15.0",
+        "@lingui/react": "^3.15.0",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
@@ -20,6 +24,8 @@
         "@babel/core": "^7.20.5",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
+        "@lingui/cli": "^3.15.0",
+        "@lingui/macro": "^3.15.0",
         "@types/lodash": "^4.14.191",
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
