--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build",
+        "build": "tsc && vite build --emptyOutDir",
         "preview": "vite preview",
         "extract": "lingui extract",
         "compile": "lingui compile --typescript"
