--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -15,6 +15,8 @@ env:
   - INVENTREE_PLUGIN_FILE=/opt/inventree/plugins.txt
   - INVENTREE_CONFIG_FILE=/opt/inventree/config.yaml
 after_install: contrib/packager.io/postinstall.sh
+before:
+  - contrib/packager.io/before.sh
 dependencies:
   - curl
   - python3
