--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -120,6 +120,8 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
+          sbom: true
+          provenance: false
           target: production
           tags: ${{ env.docker_tags }}
           build-args: |
