--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,3 +54,8 @@ repos:
           docs/docs/javascripts/.*|
           docs/docs/webfonts/.*
       )$
+- repo: https://github.com/pre-commit/mirrors-prettier
+  rev: ""
+  hooks:
+    - id: prettier
+      files: ^src/frontend/.*\.(js|jsx|ts|tsx)$
