--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,6 +22,7 @@
         "@babel/preset-typescript": "^7.18.6",
         "@lingui/cli": "^4.2.1",
         "@lingui/macro": "^4.2.1",
+        "@playwright/test": "^1.35.0",
         "@types/node": "^20.3.0",
         "@types/react": "^18.0.24",
         "@types/react-dom": "^18.0.8",
