--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -14,14 +14,14 @@ jobs:
       with:
         node-version: 16
     - name: Install dependencies
-      run: npm ci
+      run: cd src/frontend && yarn install
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      run: cd src/frontend && npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test
+      run: cd src/frontend &&  npx playwright test
     - uses: actions/upload-artifact@v3
       if: always()
       with:
         name: playwright-report
-        path: playwright-report/
+        path: src/frontend/playwright-report/
         retention-days: 30
