--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -66,12 +66,12 @@ jobs:
 
       - name: 0.10.0 Database
         run: |
-          cp test-db/0.10.0.sqlite3 ./db.sqlite3
+          cp test-db/stable_0.10.0.sqlite3 ./db.sqlite3
           chmod +rw db.sqlite3
           invoke migrate
 
       - name: 0.11.0 Database
         run: |
-          cp test-db/0.11.0.sqlite3 ./db.sqlite3
+          cp test-db/stable_0.11.0.sqlite3 ./db.sqlite3
           chmod +rw db.sqlite3
           invoke migrate
