--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -138,7 +138,12 @@ nav:
       - Sales Order: report/sales_order.md
       - Return Order: report/return_order.md
       - BOM: report/bom.md
-    - Labels: report/labels.md
+    - Labels:
+      - Custom Labels: report/labels.md
+      - Part Labels: report/labels/part_labels.md
+      - Stock Labels: report/labels/stock_labels.md
+      - Location Labels: report/labels/location_labels.md
+      - Build Labels: report/labels/build_labels.md
     - Helper Functions: report/helpers.md
     - Barcodes: report/barcodes.md
     - Context Variables: report/context_variables.md
