Updates to tasks.py
- Run unit tests in parallel

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -77,7 +77,7 @@ jobs:
       - name: Run Unit Tests
         run: |
           echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> docker.dev.env
-          docker-compose run inventree-dev-server invoke test --disable-pty
+          docker-compose run inventree-dev-server invoke test --disable-pty --ignore=migration_test
           docker-compose down
       - name: Set up QEMU
         if: github.event_name != 'pull_request'
