Trigger CI tests when .github dir changes

--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -39,6 +39,7 @@ jobs:
             - 'InvenTree/**'
             - 'requirements.txt'
             - 'requirements-dev.txt'
+            - '.github/**'
 
   pep_style:
     name: Style [Python]
