--- a/.github/workflows/migration_test.yaml
+++ b/.github/workflows/migration_test.yaml
@@ -40,7 +40,7 @@ jobs:
             - 'InvenTree/**'
             - 'requirements.txt'
             - 'requirements-dev.txt'
-            - '.github/'
+            - '.github/**'
 
   migrations-checks:
     name: Run Database Migrations
