--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 github: inventree
 ko_fi: inventree
 patreon: inventree
-custom: ["https://paypal.me/inventree?locale.x=en_AU", paypal]
+custom: [paypal.me/inventree]
