--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -204,7 +204,7 @@ jobs:
       - name: Check Migration Files
         run: python3 ci/check_migration_files.py
       - name: Coverage Tests
-        run: invoke coverage
+        run: invoke test --coverage
       - name: Upload Coverage Report
         uses: coverallsapp/github-action@v2
         with:
