Force migration checks for docker build

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -78,6 +78,7 @@ jobs:
         run: |
           echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> docker.dev.env
           docker-compose run inventree-dev-server invoke test --disable-pty
+          docker-compose run inventree-dev-server invoke test --migrations --disable-pty
           docker-compose down
       - name: Set up QEMU
         if: github.event_name != 'pull_request'
