--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -8,7 +8,7 @@ wheel>=0.37.0
 
 # Database links
 psycopg2>=2.9.1
-mysqlclient>=2.0.3
+mysqlclient>=2.0.3,<=2.1.1
 pgcli>=3.1.0
 mariadb>=1.0.7,<1.1.0
 
