--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -393,9 +393,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
-      - uses: actions/setup-node@v3
+      - name: Environment Setup
+        uses: ./.github/actions/setup
         with:
-          node-version: 16
+          npm: true
+          install: true
       - name: Install dependencies
         run: cd src/frontend && yarn install
       - name: Install Playwright Browsers
