--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -399,7 +399,7 @@ jobs:
           npm: true
           install: false
       - name: Set up test data
-        run: invoke setup_test --ignore_update
+        run: invoke setup-test --ignore_update
       - name: Install dependencies
         run: cd src/frontend && yarn install
       - name: Install Playwright Browsers
