--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -390,6 +390,14 @@ jobs:
     timeout-minutes: 60
     needs: paths-filter
     if: needs.paths-filter.outputs.frontend == 'true'
+    env:
+      INVENTREE_DB_ENGINE: sqlite3
+      INVENTREE_DB_NAME: /home/runner/work/InvenTree/db.sqlite3
+      INVENTREE_DEBUG: info
+      INVENTREE_PLUGINS_ENABLED: false
+      INVENTREE_ADMIN_USER': 'testuser'
+      INVENTREE_ADMIN_EMAIL': 'admin@example.com'
+      INVENTREE_ADMIN_PASSWORD': 'inventree'
 
     steps:
       - uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # pin@v3.1.0
@@ -401,6 +409,8 @@ jobs:
           update: true
       - name: Set up test data
         run: invoke setup-test -i
+      - name: Set credentials
+        run: invoke setup-test -c
       - name: Install dependencies
         run: cd src/frontend && yarn install
       - name: Install Playwright Browsers
