--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -1,20 +1,51 @@
 {
     "name": "InvenTreeUI",
     "private": true,
-    "version": "0.1.0",
+    "version": "0.0.1",
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "tsc && vite build --emptyOutDir",
+        "build": "tsc && vite build",
         "preview": "vite preview",
+        "lint": "eslint src",
+        "format": "prettier --config .prettierrc 'src/**/*.tsx' --write",
         "extract": "lingui extract",
         "compile": "lingui compile --typescript"
     },
     "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@lingui/core": "^4.2.1",
         "@lingui/react": "^4.2.1",
+        "@mantine/core": "^6.0.15",
+        "@mantine/dates": "^6.0.15",
+        "@mantine/dropzone": "^6.0.15",
+        "@mantine/form": "^6.0.15",
+        "@mantine/hooks": "^6.0.15",
+        "@mantine/modals": "^6.0.15",
+        "@mantine/notifications": "^6.0.15",
+        "@sentry/react": "^7.22.0",
+        "@sentry/tracing": "^7.22.0",
+        "@tabler/icons": "^2.23.0",
+        "@tanstack/react-query": "^4.16.1",
+        "axios": "^1.1.3",
+        "babel-plugin-macros": "^3.1.0",
+        "bootstrap": "^5.2.3",
+        "bootstrap-table": "^1.21.2",
+        "chart.js": "^4.1.1",
+        "dayjs": "^1.11.6",
+        "html5-qrcode": "^2.3.3",
+        "lodash": "^4.17.21",
+        "moment": "^2.29.4",
+        "prettier": "^2.7.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-bootstrap": "^2.7.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.4.3",
+        "zustand": "^4.2.0"
     },
     "devDependencies": {
         "@babel/core": "^7.20.5",
@@ -22,14 +53,16 @@
         "@babel/preset-typescript": "^7.18.6",
         "@lingui/cli": "^4.2.1",
         "@lingui/macro": "^4.2.1",
-        "@playwright/test": "^1.35.0",
-        "@types/node": "^20.3.0",
-        "@types/react": "^18.0.24",
-        "@types/react-dom": "^18.0.8",
+        "@playwright/test": "^1.35.1",
+        "@types/jquery": "^3.5.16",
+        "@types/lodash": "^4.14.191",
+        "@types/node": "^20.3.2",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
         "@types/react-router-dom": "^5.3.3",
-        "@vitejs/plugin-react": "^4.0.0",
+        "@vitejs/plugin-react": "^4.0.1",
         "babel-plugin-macros": "^3.1.0",
-        "eslint": "^8.27.0",
+        "eslint": "^8.43.0",
         "typescript": "^5.1.3",
         "vite": "^4.0.3",
         "vite-plugin-babel-macros": "^1.0.6"
