--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -30,6 +30,7 @@
         "@sentry/react": "^7.22.0",
         "@sentry/tracing": "^7.22.0",
         "@tabler/icons": "^2.23.0",
+        "@tabler/icons-react": "^2.23.0",
         "@tanstack/react-query": "^4.16.1",
         "axios": "^1.1.3",
         "babel-plugin-macros": "^3.1.0",
