--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,6 +44,16 @@ repos:
     rev: v1.29.0
     hooks:
       - id: djlint-django
+- repo: https://github.com/codespell-project/codespell
+  rev: v2.2.4
+  hooks:
+  - id: codespell
+    exclude: >
+      (?x)^(
+          docs/docs/stylesheets/.*|
+          docs/docs/javascripts/.*|
+          docs/docs/webfonts/.*
+      )$
 - repo: https://github.com/pre-commit/mirrors-prettier
   rev: "v3.0.0-alpha.9-for-vscode"
   hooks:
