add sort plugin

--- a/src/frontend/.prettierrc
+++ b/src/frontend/.prettierrc
@@ -2,5 +2,8 @@
   "semi": true,
   "trailingComma": "none",
   "singleQuote": true,
-  "printWidth": 80
+  "printWidth": 80,
+  "importOrder": ["^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
