--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
         args: [requirements.in, -o, requirements.txt]
         files: ^requirements\.(in|txt)$
 -   repo: https://github.com/Riverside-Healthcare/djLint
-    rev: v1.29.0
+    rev: v1.30.2
     hooks:
       - id: djlint-django
 - repo: https://github.com/codespell-project/codespell
@@ -52,13 +52,18 @@ repos:
       (?x)^(
           docs/docs/stylesheets/.*|
           docs/docs/javascripts/.*|
-          docs/docs/webfonts/.*
+          docs/docs/webfonts/.* |
+          InvenTree/web/static/web/assets/.* |
+          src/frontend/src/locales/.* |
       )$
 - repo: https://github.com/pre-commit/mirrors-prettier
   rev: "v3.0.0-alpha.9-for-vscode"
   hooks:
     - id: prettier
       files: ^src/frontend/.*\.(js|jsx|ts|tsx)$
+      additional_dependencies:
+      - "prettier@^2.4.1"
+      - "@trivago/prettier-plugin-sort-imports"
 - repo: https://github.com/pre-commit/mirrors-eslint
   rev: "v8.42.0"
   hooks:
