--- a/requirements.in
+++ b/requirements.in
@@ -19,7 +19,7 @@ django-markdownify                      # Markdown rendering
 django-money<3.0.0                      # Django app for currency management  # FIXED 2022-06-26 to make sure py-moneyed is not conflicting
 django-mptt==0.11.0                     # Modified Preorder Tree Traversal
 django-redis>=5.0.0                     # Redis integration
-django-q                                # Background task scheduling
+django-q2                               # Background task scheduling
 django-q-sentry                         # sentry.io integration for django-q
 django-sql-utils                        # Advanced query annotation / aggregation
 django-sslserver                        # Secure HTTP development server
