--- a/.github/workflows/qc_checks.yaml
+++ b/.github/workflows/qc_checks.yaml
@@ -380,3 +380,10 @@ jobs:
         cp test-db/stable_0.11.0.sqlite3 /home/runner/work/InvenTree/db.sqlite3
         chmod +rw /home/runner/work/InvenTree/db.sqlite3
         invoke migrate
+
+    - name: 0.12.0 Database
+      run: |
+        rm /home/runner/work/InvenTree/db.sqlite3
+        cp test-db/stable_0.12.0.sqlite3 /home/runner/work/InvenTree/db.sqlite3
+        chmod +rw /home/runner/work/InvenTree/db.sqlite3
+        invoke migrate
