--- a/.pkgr.yml
+++ b/.pkgr.yml
@@ -21,6 +21,7 @@ dependencies:
   - curl
   - python3.9
   - python3.9-venv
+  - python3.9-dev
   - python3-pip
   - python3-cffi
   - python3-brotli
