--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ django==3.2.20
     #   django-q2
     #   django-recurrence
     #   django-redis
+    #   django-sesame
     #   django-sql-utils
     #   django-sslserver
     #   django-stdimage
@@ -124,6 +125,8 @@ django-recurrence==1.11.1
     # via django-ical
 django-redis==5.3.0
     # via -r requirements.in
+django-sesame==3.1
+    # via -r requirements.in
 django-sql-utils==0.6.1
     # via -r requirements.in
 django-sslserver==0.22
@@ -164,7 +167,7 @@ icalendar==5.0.7
     # via django-ical
 idna==3.4
     # via requests
-importlib-metadata==6.7.0
+importlib-metadata==6.8.0
     # via markdown
 inflection==0.5.1
     # via drf-spectacular
@@ -306,7 +309,7 @@ xlrd==2.0.1
     # via tablib
 xlwt==1.3.0
     # via tablib
-zipp==3.15.0
+zipp==3.16.0
     # via importlib-metadata
 zopfli==0.2.2
     # via fonttools
