--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@mantine/modals": "^6.0.16",
     "@mantine/notifications": "^6.0.16",
     "eslint": "^8.41.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "mantine-datatable": "^2.8.2"
   }
 }
